Fixing playAll css on mobiles

--- a/web/static/web/css/discoteca.css
+++ b/web/static/web/css/discoteca.css
@@ -9,3 +9,17 @@
 figcaption{
 	margin-bottom: 10px;
 }
+
+#tapaFigCaption{
+	margin-top: 10px;
+}
+
+.playAll{
+	margin:0px auto 15px auto;
+}
+
+@media(max-width: 375px){
+	.playAll{
+		margin-top: 10px;
+	}
+}
